<resources>

    <string name="app_name">X-Tracker</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">X-Tracker</string>
    <string name="button_exit">Exit</string>
    <string name="call_for_help">Call For Help</string>
    <string name="togglebutton">ToggleButton</string>
    <string name="action_map">My Location</string>
    <string name="action_admin">Admin</string>
    <string name="action_exit">Exit</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_settings">Settings</string>
    <string name="action_info">Info</string>

</resources>