<menu xmlns:android="http://schemas.android.com/apk/res/android">
   <item
        android:id="@+id/action_map"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:icon="@drawable/ic_dialog_map"
        android:title="@string/action_map" />
   <item
        android:id="@+id/action_admin"
        android:orderInCategory="100"
        android:showAsAction="never"
         
        android:title="@string/action_admin" />

   <item
        android:id="@+id/action_refresh"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:icon="@drawable/ic_action_refresh" 
        android:title="@string/action_refresh" />
   <item
        android:id="@+id/action_info"
        android:orderInCategory="100"
        android:showAsAction="never"
 
        android:title="@string/action_info" />  
   <item
        android:id="@+id/action_exit"
        android:orderInCategory="100"
        android:showAsAction="never"
         
        android:title="@string/action_exit" />      
          
  <!--     <item
        android:id="@+id/action_settings"
        android:showAsAction="ifRoom|withText"	
        android:icon="@drawable/ic_action_settings"
        android:title="@string/action_settings">
    </item> -->
</menu>
